# Flow

./: .gitignore  CMakeLists.txt  Flow.code-workspace  Flow.sln  README.md  main.cpp  vertexShader.glsl
Flow/: Game1.cs  Program.cs
old_code/triangle_src/: gl.c  main.cpp
old_code/triangle_src/assets/: vertexShader.glsl
src/: camera.h  input.h  main.cpp  objectManager.cpp  objectManager.h
src/assets/: directional_lighting.fs  lighting.fs  simple_lighting.fs  simple_lighting.vs
src/hud/: crosshair.cpp  crosshair.h  hud.cpp  hud.h
src/shapes/: cube.cpp  cube.h  shape.cpp  shape.h  shapes.h  sphere.cpp  sphere.h
